# dt_syk

./: .gitignore  README.txt  flake.nix  hamiltonian_factory.py  linalg.py  main.py  pyproject.toml  random_phase.py  sbatch-temporal.sh  sbatch_temporal.sh  syk_temporal_basic.py  utilities.py
